maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:2: error: Missing closing brace `}' assumed here
var al=0
^RandomMouseMaze:2: error: expected class or object definition
var al=0
^RandomMouseMaze:3: error: expected start of definition
override def run() {
         ^