maze.randommouse.RandomMouseMaze.scala.code
var al=0
override def run() {
  while (estSurBiscuit()==false){
    al=random3()
    if (estFaceMur()==true){
      if (al==0){
        gauche()
        al=random3()
      }
      else if (al==0){
        avance()
      }
      else if (al==1){
        droite()
      }
      else if (al==2){
        gauche()
      }
    }
    prendBiscuit()
}
     